--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ dev, main, test-github-actions ]
+    branches: [ dev, main ]
   pull_request:
-    branches: [ dev, main, test-github-actions ]
+    branches: [ dev, main ]
 
 jobs:
   build:
